--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "rsdb-utils"
-version = "0.1.post2"
+version = "0.2"
 description = "Utils to process the Regime Shifts DataBase CSV and parquet files"
 readme = "README.md"
 authors = [{ name = "Romain Thomas", email = "romain.thomas@su.se" }]
@@ -39,6 +39,7 @@ dependencies = [
 requires-python = ">=3.9"
 
 [tool.setuptools]
+include-package-data = true
 packages = ["rsdb_utils"]
 
 [project.urls]
